fix(PowerSpy): closing connections were missing
There was a problem for closing the connexion. It was not possible to stop completely the PowerSpy and to start it again
(input, output were not closed, and one method in the BluecoveImpl was not called)

chore(build): version, lib folder to replace the bluecove one

Increment the build version (fix a bug), and use directly the lib folder to include the external libraries